# Infernode-logic

./: README.md  bunfig.toml  package.json  vite.config.ts
anchor/: Anchor.toml  README.md
anchor/programs/infernode_escrow/: Cargo.toml
anchor/programs/infernode_escrow/src/: lib.rs
cli/: README.md  infernode.mjs
src/: routeTree.gen.ts  styles.css
src/components/: app-shell.tsx  site-chrome.tsx
src/components/solana/: connect-wallet.tsx  network-status.tsx  wallet-provider.tsx
src/db/: index.ts  schema.ts
src/lib/: buffer-polyfill.ts  error-reporting.ts  format.ts  pricing.ts  server-fns.ts  solana-config.ts  solana-pay.ts  tasks.ts
src/routes/: __root.tsx  app.index.tsx  app.jobs.tsx  app.new.tsx  docs.tsx  index (1).tsx  index.tsx  pricing.tsx  providers.tsx  whitepaper.tsx
src/routes/api/worker/: jobs.$id.result.ts  jobs.next.ts  me.ts
src/server/: core.ts
