[package]
name = "infernode_escrow"
version = "0.1.0"
description = "InferNode on-chain job escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "infernode_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
